chore(setting): adjust site setting and modify footer style

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -12,19 +12,18 @@
 <!-- Menu -->
 <nav id="menu">
 	<ul class="links">
-        {% for page in site.pages %}
-		    {% if page.layout == "home" %}
-		        <li><a href="{{ "" | absolute_url }}/">{{ page.title }}</a></li>
-	    	{% endif %}
+    {% for page in site.pages %}
+			{% if page.layout == "home" %}
+				<li><a href="{{ "" | absolute_url }}/">{{ page.title }}</a></li>
+			{% endif %}
 		{% endfor %}
 		{% for page in site.html_pages %}
-		    {% if page.layout != "home" and page.nav-menu == true %}
-		        <li><a href="{{ page.url | absolute_url }}">{{ page.title }}</a></li>
-		    {% endif %}
+		  {% if page.layout != "home" and page.nav-menu == true %}
+		    <li><a href="{{ page.url | absolute_url }}">{{ page.title }}</a></li>
+		  {% endif %}
 		{% endfor %}
-	</ul>
-	<ul class="actions vertical">
-		<li><a href="#" class="button special fit">Get Started</a></li>
-		<li><a href="#" class="button fit">Log In</a></li>
+		<li>
+			<a href="https://traiwan.com/official/booking.php?id=misstravel">線上訂房</a>
+		</li>
 	</ul>
 </nav>
