chore(setting): ajdust footer and config setting

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -12,21 +12,17 @@
 					{% endif %}
 				{% endfor %}
 				<li>
-					<a href="tel:{{ site.phone }}">
-						<span class="icon alt fa-phone"></span>
-					</a>
+					<a href="tel:{{ site.phone }}" class="icon alt fa-phone" target="_blank" rel="noopener noreferrer"></a>
 				</li>
 				<li>
-					<a href="mailto:{{ site.email }}">
-						<span class="icon alt fa-envelope" ></span>
-					</a>
+					<a href="mailto:{{ site.email }}" class="icon alt fa-envelope" target="_blank" rel="noopener noreferrer"></a>
 				</li>
 				<li>
-					<a href="https://www.google.com.tw/maps/place/%E5%AF%86%E5%BC%8F%E6%97%85%E8%A1%8C/@24.418704,120.9115453,17z/data=!3m1!4b1!4m8!3m7!1s0x3468ffc8da78a9d1:0x86fdb6fa63426b73!5m2!4m1!1i2!8m2!3d24.418704!4d120.913734?hl=zh-TW">
-						<span class="icon alt fa-home"></span>
-					</a>
+					<a href="https://www.google.com.tw/maps/place/%E5%AF%86%E5%BC%8F%E6%97%85%E8%A1%8C/@24.418704,120.9115453,17z/data=!3m1!4b1!4m8!3m7!1s0x3468ffc8da78a9d1:0x86fdb6fa63426b73!5m2!4m1!1i2!8m2!3d24.418704!4d120.913734?hl=zh-TW" class="icon alt fa-home" target="_blank" rel="noopener noreferrer"></a>
 				</li>
-				<li>&copy; {{ site.title }}</li>
+				<li>
+					<strong>&copy; {{ site.title }}</strong>
+				</li>
 			</ul>
 		</div>
 	</footer>
