--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -15,7 +15,7 @@
 					<h1>{{ page.landing-title }}</h1>
 				</header>
 				<div class="content">
-					<p style="text-transform: uppercase;">{{ site.description }}</p>
+					<p style="text-transform: uppercase;"></p>
 				</div>
 			</div>
 		</section>
@@ -26,13 +26,7 @@
 			<!-- Two -->
 			<section id="two">
 				<div class="inner">
-					<header class="major">
-						<h2>Massa libero</h2>
-					</header>
 					<p>{{ content }}</p>
-					<ul class="actions">
-						<li><a href="landing.html" class="button next">Get Started</a></li>
-					</ul>
 				</div>
 			</section>
 		</div>
