--- a/_includes/header.html
+++ b/_includes/header.html
@@ -20,7 +20,7 @@
 			{% endif %}
 		{% endfor %}
 		{% for page in site.html_pages %}
-		  {% if page.layout != "home" and page.nav-menu == true %}
+		  {% if page.layout != "home" && page.nav-menu == true %}
 		    <li><a href="{{ page.url | absolute_url }}">{{ page.title }}</a></li>
 		  {% endif %}
 		{% endfor %}
