--- a/_includes/header.html
+++ b/_includes/header.html
@@ -19,8 +19,8 @@
 				<li><a href="{{ "" | absolute_url }}/">{{ page.title }}</a></li>
 			{% endif %}
 		{% endfor %}
-		{% for page in site.html_pages %}
-		  {% if page.layout != "home" && page.nav-menu == true %}
+		{% for page in site.pages %}
+		  {% if page.layout != "home" and page.nav-menu == true %}
 		    <li><a href="{{ page.url | absolute_url }}">{{ page.title }}</a></li>
 		  {% endif %}
 		{% endfor %}
