chore(lib): import bootstrap css

--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -52,6 +52,7 @@
 
 // Base.
 
+	@import 'bootstrap/bootstrap';
 	@import 'base/page';
 	@import 'base/typography';
 
@@ -68,6 +69,7 @@
 	@import 'components/tiles';
 	@import 'components/contact-method';
 	@import 'components/spotlights';
+	
 
 // Layout.
 
