--- a/_sass/bootstrap/_type.scss
+++ b/_sass/bootstrap/_type.scss
@@ -4,10 +4,19 @@
 // Headings
 //
 
+@font-face {
+  font-family: setofont;
+  src: url("../../assets/fonts/setofont.ttf");
+}
+
+* {
+  font-family: setofont !important; 
+}
+
 h1, h2, h3, h4, h5, h6,
 .h1, .h2, .h3, .h4, .h5, .h6 {
   margin-bottom: $headings-margin-bottom;
-  font-family: $headings-font-family;
+  font-family: setofont;
   font-weight: $headings-font-weight;
   line-height: $headings-line-height;
   color: $headings-color;
