--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -12,7 +12,7 @@
 		<section id="banner" class="major">
 			<div class="inner">
 				<header class="major">
-					<h1>{{ page.landing-title }}</h1>
+					<h1>{{ page.landing-title }} / MissTravel</h1>
 				</header>
 				<div class="content">
 					<p style="text-transform: uppercase;"></p>
