chore(rooms): create rooms page

--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -58,6 +58,7 @@
 
 // Component.
 
+	@import 'components/autils';
 	@import 'components/section';
 	@import 'components/form';
 	@import 'components/box';
