--- a/_sass/components/_autils.scss
+++ b/_sass/components/_autils.scss
@@ -10,6 +10,14 @@
   font-size: 28px;
 }
 
+.font-title {
+  font-size: 64px;
+}
+
+.list-item {
+  border: 3px solid #dee2e6;
+}
+
 .list-item:hover {
   box-shadow: 0px 9px 15px 2px rgba(137,142,150,0.25);
   transform: translatey(-5px);
