--- a/_sass/components/_autils.scss
+++ b/_sass/components/_autils.scss
@@ -23,3 +23,17 @@
   transform: translatey(-5px);
   transition: all 0.3s;
 }
+
+.item-carousel {
+  box-shadow: 0px 9px 15px 9px rgba(137,142,150,0.25);
+  border: 5px solid #FFD306;
+  border-radius: 10px;
+}
+
+.yellow {
+  color: #FFD306;
+}
+
+.content {
+  margin: 30px 0px;
+}
