chore(roomPage): adjust room page

--- a/_layouts/room.html
+++ b/_layouts/room.html
@@ -49,7 +49,7 @@
           <div class="content">
             <h2>『預訂前請先詳閲以下介紹(含延期退費說明)並衡量房間大小是否合適』</h2>
             <h3>
-              <a href="{{ site.base_url }}/{{ site.account_url }}" class="button">訂房說明</a>
+              <a href="{{ site.base_url }}/{{ site.account_url }}" class="button">訂房流程</a>
               <a href="{{ site.base_url }}/{{ site.role_url }}" class="button special">園內規約</a>
             </h3>
             <h4>【訂位須知】</h4>
@@ -57,8 +57,8 @@
               <li>訂假日提早一晚夜衝者，當日價格一律半價(限晚上 6 點後至 10 點以前進場)</li>
               <li>營區及露營木屋無提供早晚餐，套房含早餐，無提供晚餐</li>
               <li>嚴禁直接在草皮或木板上烤肉及烹煮。若使用烤肉架、焚火台或快速爐等用具，請務必自備架高器具，並離地 60 公分以上</li>
-              <li>木屋區嚴禁攜帶寵物，如欲攜帶寵物請預訂露營營位</li>
-              <li>營位攜帶寵物如離開預訂區域請繫繩，如未繫繩將酌收 100 清潔費用/隻</li>
+              <li class="red">木屋區嚴禁攜帶寵物，如欲攜帶寵物請預訂露營營位</li>
+              <li class="red">營位攜帶寵物如離開預訂區域請繫繩，如未繫繩將酌收 100 清潔費用/隻</li>
               <li>如攜帶訪客入場每人酌收 100 元清潔費，不可抵園區消費，需於晚上 8 點前離開園區，如超過則再加收每人 100 元共計 200 元的加人費。如未登記也未主動告知有訪客，事後被營主發現得勒令立即離場</li>
               <li>一帳限一車四人</li>
               <li>為響應環保，園內住宿無提供盥洗用品，請自備毛巾及浴巾牙刷等盥洗用具</li>
