--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -15,7 +15,7 @@
 					<h1>{{ page.landing-title }} / MissTravel</h1>
 				</header>
 				<div class="content">
-					<p style="text-transform: uppercase;"></p>
+					<p style="text-transform: uppercase; font-size: 32px;">秘密景點，深度旅行</p>
 				</div>
 			</div>
 		</section>
