--- a/_includes/tiles.html
+++ b/_includes/tiles.html
@@ -1,4 +1,4 @@
-{% assign tiles = site.html_pages | where_exp: "item", "item.show_tile != false" %}
+{% assign tiles = site.html_pages | where_exp: "item", "item.show_tile != false" | sort: 'order' %}
 
 <section id="one" class="tiles">
   {% for tile in tiles limit:site.tiles-count %}
