--- a/_layouts/room.html
+++ b/_layouts/room.html
@@ -20,7 +20,8 @@
                 <div id="carouselExampleIndicators" class="carousel slide item-carousel" data-ride="carousel">
                   <ol class="carousel-indicators">
                     <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
-                    {% for image in page.images %}
+                    {% assign images = site.images_url[page.symbol] %}
+                    {% for image in images %}
                       <li data-target="#carouselExampleIndicators" data-slide-to="{{ forloop.index + 1 }}" class="active"></li>
                     {% endfor %}
                   </ol>
@@ -28,9 +29,9 @@
                     <div class="carousel-item active">
                       <img class="d-block w-100" src="{{ site.baseurl }}/{{ page.main_image }}">
                     </div>
-                    {% for image in page.images %}
+                    {% for image in images %}
                       <div class="carousel-item">
-                        <img class="d-block w-100" src="{{ site.baseurl }}/{{ image }}">
+                        <img class="d-block w-100" src="{{ image }}">
                       </div>
                     {% endfor %}
                   </div>
