chore(config): update config yaml format

--- a/_layouts/room.html
+++ b/_layouts/room.html
@@ -31,7 +31,7 @@
                     </div>
                     {% for image in images %}
                       <div class="carousel-item">
-                        <img class="d-block w-100" src="{{ image }}">
+                        <img class="d-block w-100" src="{{ image.url }}">
                       </div>
                     {% endfor %}
                   </div>
