chore(link): fix home page link

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,31 +1,29 @@
 <!-- Wrapper -->
 <div id="wrapper">
-
-<!-- Header -->
-<header id="header"{% if page.layout == "landing" %} class="alt style2"{% endif %}{% if page.layout == "home" %} class="alt"{% endif %}>
-	<a href="{{ "" | absolute_url }}" class="logo">
-		<strong>{{ site.title }}</strong>
-	</a>
-	<nav>
-		<a href="#menu">Menu</a>
+	<!-- Header -->
+	<header id="header"{% if page.layout == "landing" %} class="alt style2"{% endif %}{% if page.layout == "home" %} class="alt"{% endif %}>
+		<a href="{{ site.baseurl | absolute_url  }}" class="logo">
+			<strong>{{ site.title }}</strong>
+		</a>
+		<nav>
+			<a href="#menu">Menu</a>
+		</nav>
+	</header>
+	<!-- Menu -->
+	<nav id="menu">
+		<ul class="links">
+			{% for page in site.pages %}
+				{% if page.layout == "home" %}
+					<li><a href="{{ site.baseurl | absolute_url }}">{{ page.title }}</a></li>
+				{% endif %}
+			{% endfor %}
+			{% for page in site.pages %}
+				{% if page.layout != "home" and page.nav-menu == true %}
+					<li><a href="{{ page.url | absolute_url }}">{{ page.title }}</a></li>
+				{% endif %}
+			{% endfor %}
+			<li>
+				<a href="https://traiwan.com/official/booking.php?id=misstravel">空房查詢</a>
+			</li>
+		</ul>
 	</nav>
-</header>
-
-<!-- Menu -->
-<nav id="menu">
-	<ul class="links">
-    {% for page in site.pages %}
-			{% if page.layout == "home" %}
-				<li><a href="{{ "" | absolute_url }}">{{ page.title }}</a></li>
-			{% endif %}
-		{% endfor %}
-		{% for page in site.pages %}
-		  {% if page.layout != "home" and page.nav-menu == true %}
-		    <li><a href="{{ page.url | absolute_url }}">{{ page.title }}</a></li>
-		  {% endif %}
-		{% endfor %}
-		<li>
-			<a href="https://traiwan.com/official/booking.php?id=misstravel">空房查詢</a>
-		</li>
-	</ul>
-</nav>
