chore(css): adjust menu font-size

--- a/_sass/layout/_menu.scss
+++ b/_sass/layout/_menu.scss
@@ -68,7 +68,7 @@
 						border: 0;
 						border-top: solid 1px _palette(border);
 						display: block;
-						font-size: 1.2em;
+						font-size: 20px;
 						font-weight: _font(weight-bold);
 						letter-spacing: _font(letter-spacing-alt);
 						line-height: 4em;
