chore(roomPage): update romm page info

--- a/_layouts/room.html
+++ b/_layouts/room.html
@@ -61,7 +61,7 @@
               <li class="red">木屋區嚴禁攜帶寵物，如欲攜帶寵物請預訂露營營位</li>
               <li class="red">營位攜帶寵物如離開預訂區域請繫繩，如未繫繩將酌收 100 清潔費用/隻</li>
               <li>如攜帶訪客入場每人酌收 100 元清潔費，不可抵園區消費，需於晚上 8 點前離開園區，如超過則再加收每人 100 元共計 200 元的加人費。如未登記也未主動告知有訪客，事後被營主發現得勒令立即離場</li>
-              <li>一帳限一車四人</li>
+              <li>一帳限一車四人 (加人、加車、加帳費另計)</li>
               <li>為響應環保，園內住宿無提供盥洗用品，請自備毛巾及浴巾牙刷等盥洗用具</li>
             </ul>
             {{ content }}
