chore(hoom): adjust tiles image logic

--- a/_includes/tiles.html
+++ b/_includes/tiles.html
@@ -14,7 +14,7 @@
   {% endfor %}
   <article>
     <span class="image">
-      <img src="{{ site.images_url.booking }}" alt="" />
+      <img src="/assets/images/booking.jpg" alt="" />
     </span>
     <header class="major">
       <h3 style="font-size: 40px;"><a href="https://traiwan.com/official/booking.php?id=misstravel" class="link">空房查詢</a></h3>
