--- a/_layouts/room.html
+++ b/_layouts/room.html
@@ -15,8 +15,8 @@
             <h1>{{ page.title }}</h1>
           </header>
             <div class="row">
-              <div class="col-1"></div>
-              <div class="col-10">
+              <div class="col-1 col-md-2 col-xl-3"></div>
+              <div class="col-10 col-md-8 col-xl-6">
                 <div id="carouselExampleIndicators" class="carousel slide item-carousel" data-ride="carousel">
                   <ol class="carousel-indicators">
                     <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
@@ -44,7 +44,7 @@
                   </a>
                 </div>
               </div>
-              <div class="col-1"></div>
+              <div class="col-1 col-md-2 col-xl-3"></div>
             </div>
           <div class="content">
             <h2>『預訂前請先詳閲以下介紹(含延期退費說明)並衡量房間大小是否合適』</h2>
