--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -20,9 +20,19 @@
 <section id="one">
 	<div class="inner">
 		<header class="major">
-			<h1>{{ page.title }}</h1>
+			<h1>{{ page.title }}{% if page.datetime %} <span class="text-muted font-sm">{{ page.datetime }}</span> {% endif %}</h1>
 		</header>
-		{% if page.image %}<span class="image main"><img src="{{ site.baseurl }}/{{ page.image }}" alt="" /></span>{% endif %}
+		{% if page.image %}
+			<div class="container-fluid">
+				<div class="row">
+					<div class="col-1 col-md-2"></div>
+					<div class="col-10 col-md-8">
+						<div class="image main"><img class="rounded" src="{{ site.baseurl }}/{{ page.image }}" alt="" /></div>
+					</div>
+					<div class="col-1 col-md-2"></div>
+				</div>
+			</div>
+		{% endif %}
 		{{ content }}
 	</div>
 </section>
