--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -24,14 +24,8 @@
 				<h1>{{ page.title }}{% if page.datetime %} <span class="text-muted font-sm">{{ page.datetime }}</span> {% endif %}</h1>
 			</header>
 			{% if page.image %}
-				<div class="container">
-					<div class="row">
-						<div class="col-1 col-md-2"></div>
-						<div class="col-10 col-md-8">
-							<div class="image main"><img class="rounded" src="{{ site.baseurl }}/{{ page.image }}" alt="" /></div>
-						</div>
-						<div class="col-1 col-md-2"></div>
-					</div>
+				<div>
+					<div class="image main"><img class="rounded" src="{{ site.baseurl }}/{{ page.image }}" alt="" /></div>
 				</div>
 			{% endif %}
 			{{ content }}
