--- a/_includes/header.html
+++ b/_includes/header.html
@@ -12,12 +12,13 @@
 	<!-- Menu -->
 	<nav id="menu">
 		<ul class="links">
-			{% for page in site.pages %}
+			{% assign pages = site.pages | sort: 'order' %}
+			{% for page in pages %}
 				{% if page.layout == "home" %}
 					<li><a href="{{ 'index.html' | relative_url }}">{{ page.title }}</a></li>
 				{% endif %}
 			{% endfor %}
-			{% for page in site.pages %}
+			{% for page in pages %}
 				{% if page.layout != "home" and page.nav-menu == true %}
 					<li><a href="{{ page.url | absolute_url }}">{{ page.title }}</a></li>
 				{% endif %}
