chore(font): convert setofont to .woff2

--- a/_sass/bootstrap/_variables.scss
+++ b/_sass/bootstrap/_variables.scss
@@ -10,7 +10,7 @@
 
 @font-face {
   font-family: setofont;
-  src: url("../../assets/fonts/setofont.ttf");
+  src: url("../../assets/fonts/setofont.woff2");
 }
 
 // stylelint-disable
