--- a/_sass/bootstrap/_type.scss
+++ b/_sass/bootstrap/_type.scss
@@ -6,7 +6,7 @@
 
 @font-face {
   font-family: setofont;
-  src: url("../../assets/fonts/setofont.ttf");
+  src: url("../../assets/fonts/setofont.woff2");
 }
 
 * {
