--- a/_layouts/room.html
+++ b/_layouts/room.html
@@ -16,8 +16,8 @@
               <h1>{{ page.title }}</h1>
             </header>
               <div class="row">
-                <div class="col-1 col-lg-2"></div>
-                <div class="col-10 col-lg-8">
+                <div class="col-lg-2"></div>
+                <div class="col-12 col-lg-8">
                   <div id="carouselExampleIndicators" class="carousel slide item-carousel" data-ride="carousel">
                     <ol class="carousel-indicators">
                       <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
@@ -45,7 +45,7 @@
                     </a>
                   </div>
                 </div>
-                <div class="col-1 col-lg-2"></div>
+                <div class="col-lg-2"></div>
               </div>
             <div class="content">
               <h2>『預訂前請先詳閲以下介紹(含延期退費說明)並衡量房間大小是否合適』</h2>
